-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.1
-
None
-
-
75914914a (dev), 97d40d7a5 (6.10)
Binding containsMouse to layer.enabled leads to crash when exiting hovered item.
import QtQuick Window { width: 640 height: 480 visible: true Rectangle { // could be Item as well width: 400 height: 400 color: "red" layer.enabled: mouseArea.containsMouse } MouseArea { id: mouseArea width: 400 height: 400 hoverEnabled: true } }